k8s/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nupin
  labels:
    app.kubernetes.io/name: nupin
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    name: http
    targetPort: http
  - protocol: TCP
    port: 9090
    name: metrics
    targetPort: metrics
  selector:
